test/tests/compiler/18_structures/invalid_parse/var_decl_missing_struct_kw.plx
pub fn main(none) i32 {
    type struc x;
    y: x; # you can't specify a structure type with just the tag; you need the
          # 'struct' specifier
    return 0
}
